--- a/src/app/hub.module.css
+++ b/src/app/hub.module.css
@@ -1,9 +1,3 @@
-html,
-body {
-  height: 100%;
-  overflow: hidden;
-}
-
 .hub {
   display: flex;
   flex-direction: column;
